# GEN_RefactorC

./: .travis.yml  CMakeLists.txt  Customer.cpp  Customer.h  DownloadProject.cmake  Movie.h  MovieState.h  MovieStateChildren.h  MovieStateNewRelease.h  MovieStateRegular.h  Rental.h  main.cpp
tests/: CustomerTest.cpp  MovieTest.cpp  RentalTest.cpp  customerStatementTest.cpp
